@@ -3,6 +3,7 @@ ChangeLog for pommed
 
 version 1.18:
 	- pommed: add more IDs for Apple external keyboards
+	- pommed: relax event devices identification for internal keyboard.
 
 version 1.17:
 	- pommed: handle path change for the applesmc led interface
